<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GuideHome">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
android:layout_marginTop="40dp"
        android:padding="15dp"
        android:background="#ffd79c"
        >


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="585dp"
                android:layout_marginTop="0dp"
                android:background="@color/teal_200"
                android:gravity="top|center"
                android:orientation="vertical"
                android:padding="15dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user1"
                    android:layout_width="124dp"
                    android:layout_height="114dp"
                    android:layout_alignParentBottom="true"

                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/u2"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="0dp" />

                <TextView
                    android:id="@+id/nameid1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/balootammudu"
                    android:text="@string/Namecomp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="368dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"


                            android:padding="15dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginLeft="100dp"
                                    android:fontFamily="@font/balootammudu"
                                    android:text="About Me:"
                                    android:textColor="@color/dark_blue"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/aboutid"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="3dp"
                                    android:layout_marginTop="40dp"
                                    android:layout_marginEnd="10dp"
                                    android:fontFamily="@font/balootammudu"

                                    android:text="@string/compexp"
                                    android:textColor="@color/grey"
                                    android:textSize="15sp" />
                            </RelativeLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="368dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"


                        android:padding="15dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp">

                            <TextView
                                android:id="@+id/timeid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"

                                android:layout_marginStart="3dp"
                                android:fontFamily="@font/balootammudu"
                                android:text="@string/Timecomp"
                                android:textColor="@color/dark_blue"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/dateid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="3dp"
                                android:layout_marginTop="30dp"
                                android:fontFamily="@font/balootammudu"
                                android:text="@string/Datecomp"
                                android:textColor="@color/grey"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/feee1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginStart="3dp"
                                android:layout_marginTop="60dp"
                                android:layout_marginEnd="212dp"

                                android:fontFamily="@font/balootammudu"
                                android:text="@string/Feescomp"
                                android:textColor="@color/green"
                                android:textSize="17sp" />
                        </RelativeLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>











        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"/>



            <Button
                android:id="@+id/button3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:backgroundTint="@color/lavender"
                android:text="Enroll now" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"/>



        <TextView
            android:id="@+id/meet"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
android:textStyle="bold"
            android:textSize="17dp"
            android:fontFamily="@font/balootammudu"
            android:text="" />


    </LinearLayout>

</ScrollView>